# discovery_policy_atlas

./: .cursorignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  EVIDENCE_STRENGTH_ASSESSMENT.md  Impacts-of-local-authority_extraction.json  LOCAL.md  PROJECT_MANAGEMENT_SETUP.md  PR_NOTES.md  README.md  build_and_push.ps1  build_and_push.sh  docker-compose.yml  index.html  mkdocs.yml  railway.toml  sitemap.xml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  STEPWISE_ANALYSIS_IMPROVEMENTS.md  alembic.ini  main.py  nixpacks.toml  pyproject.toml  railway.toml  run_dev.py  supabase_add_search_query_column.sql  supabase_add_user_columns.sql  supabase_analysis_setup.sql  supabase_drop_chunks_fkey.sql  supabase_make_query_nullable.sql  supabase_migration_run_id.sql  supabase_quick_migration.sql  supabase_schema_enhancement.sql  supabase_setup.sql  supabase_synthesis_enhancement.sql  supabase_update_match_chunks.sql  test_api.py  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 9172111e65d0_initial_schema.py
backend/api/: index.html
backend/app/: __init__.py  main.py
backend/app/api/: agent.py  chat_prototype.py  projects.py  projects_v2.py  public.py  routes.py  test_extraction.py
backend/app/core/: auth.py  config.py  database.py  models.py
backend/app/core/auth/: __init__.py  base.py  dependencies.py  factory.py  identity.py
backend/app/core/auth_providers/: clerk.py  keycloak.py
backend/app/mcp/: __init__.py  schemas.py  server.py  tools.py
backend/app/mcp/widgets/: package-lock.json  package.json  pico-picker.html  search-evidence.html  tsconfig.json  vite.config.ts
backend/app/models/: database.py
backend/app/services/: advanced_rag.py  download.py  logging.py  mediacloud.py  monitoring.py  openalex.py  overton.py  project_data.py  rag_chat.py  screening.py  search_wizard.py  simplified_conversation_manager.py  summary.py  timing.py  vectorization.py
backend/app/services/analysis/: __init__.py  acquire.py  chunking.py  evidence_category.py  evidence_strength.py  extractor_langchain.py  navigator_service.py  normalize.py  parse.py  progress.py  prompts.py  references.py  relevance.py  schemas.py  schemas_langchain.py  scoring.py  scrape.py  service.py  storage.py  utils_cache.py  utils_doc_ids.py  utils_paths.py  workflow_langchain.py
backend/app/services/chatbot/: README.md  (+6 more)
backend/app/utils/: geography.py  overton.py  project_data.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/database/: index.html
backend/extraction-research-methodology/: index.html
backend/impact_assessment/: index.html
backend/langraph-extraction-system/: index.html
backend/overview/: index.html
backend/scripts/: backfill_identities.py
backend/sql/: supabase_add_user_feedback_column.sql  supabase_alter_user_feedback_user_id_to_text.sql  supabase_create_user_feedback_table.sql  supabase_drop_chunks_fkey.sql
backend/sql/migrations/: 0001_core_analysis.sql  0002_vector_store_and_match.sql  0003_synthesis_and_outcomes.sql  0004_functions_and_helpers.sql  README.md
backend/supabase/: seed.sql
backend/supabase/migrations/: 20251231000000_install_extensions.sql  20260101000000_baseline.sql  20260101000001_postgrest_roles.sql  20260106000001_remove_unused_functions.sql  20260107000002_add_get_user_projects_function.sql  20260112000001_add_is_public_flag.sql  20260116094710_impact_assessment_extensions.sql  20260128000000_add_impact_scores.sql  20260217181832_add_evidence_score_column.sql  20260219000000_add_is_public_column.sql  20260220000000_add_evidence_details_columns.sql  20260225000000_set_chunks_chunk_type_default_abstract.sql  20260302140000_add_pipeline_timings.sql  20260302150000_add_parent_project_id.sql  20260611000000_add_identity_tables.sql
backend/synthesis/: index.html
backend/test/: test_analysis_monitoring.py  test_analysis_service.py  test_auth.py  test_boolean_query.py  test_chatbot_service.py  test_chatbot_tools.py  test_cognito_auth.py  test_debug_logging.py  test_evidence_strength.py  test_langchain_extraction.py  test_openalex.py  test_parsing_with_guardrails.py  test_simple_boolean.py  test_simple_openalex.py  test_synthesis_service.py  test_timing.py
backend/test/fakes/: __init__.py  auth.py
backend/testing/: __init__.py
backend/testing/r_and_d/: __init__.py
backend/tests/core/: conftest.py  test_auth.py
backend/user-management/: index.html
(+477 files in other folders)
