[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mediacloud>=4.3.0",
    "pandas>=2.2.3",
    "pyalex>=0.18",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.9.1",
    "scrapling>=0.2.99",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.3",
    "openai>=1.0.0",
    "supabase>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "pymupdf>=1.24.10",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.4",
    "rapidfuzz>=3.9.7",
    "langgraph>=0.5.4",
    "hdbscan>=0.8.40",
    "langfuse>=2.60.7",
    "tiktoken>=0.9.0",
    "python-multipart>=0.0.5",
    "scikit-learn>=1.6.1",
    "psutil>=7.0.0",
]

[tool.uv]
override-dependencies = [
    "pyalex>=0.18",  # Force this version despite discovery-utils requirement
]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=3.6.0", # For managing git hooks
    "ruff>=0.3.0", # Python linter and formatter
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "jupyter>=1.1.1",
]
